--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 				</div>
                 <div class="content">
                     <div class="inner">
-                        <h1>Play Pickleball</h1>
+                        <h1>Troy Pickleball</h1>
                         <p>Welcome to our exclusive pickleball courts, available for reservations.<br />
                         Join our community and enjoy top-notch facilities, by invitation only.</p>
                     </div>
@@ -83,7 +83,7 @@
             </div>
 
             <footer id="footer">
-                <p>&copy; Your Court Name. Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
+                <p>&copy; Troy Pickleball Group. Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
             </footer>
         </div>
 
